// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedButtonItem Basic SegmentedButtonItem 1`] = `
<li
  class="SegmentedButtonItem--segmentedButtonItem- SegmentedButtonItem--focusableItem-"
  data-has-own-width="false"
>
  <div
    class="SegmentedButtonItem--icon- SegmentedButtonItem--withText-"
  >
    <ui5-icon
      class=""
      name="add"
    />
  </div>
  My Item
</li>
`;

exports[`SegmentedButtonItem SegmentedButtonItem Disabled 1`] = `
<li
  class="SegmentedButtonItem--segmentedButtonItem- SegmentedButtonItem--iconOnly- SegmentedButtonItem--disabled-"
  data-has-own-width="false"
>
  <div
    class="SegmentedButtonItem--icon-"
  >
    <ui5-icon
      class=""
      name="add"
    />
  </div>
</li>
`;

exports[`SegmentedButtonItem SegmentedButtonItem Icon Only 1`] = `
<li
  class="SegmentedButtonItem--segmentedButtonItem- SegmentedButtonItem--iconOnly- SegmentedButtonItem--focusableItem-"
  data-has-own-width="false"
>
  <div
    class="SegmentedButtonItem--icon-"
  >
    <ui5-icon
      class=""
      name="add"
    />
  </div>
</li>
`;

exports[`SegmentedButtonItem SegmentedButtonItem onClick 1`] = `
<li
  class="SegmentedButtonItem--segmentedButtonItem- SegmentedButtonItem--iconOnly- SegmentedButtonItem--focusableItem-"
  data-has-own-width="false"
>
  <div
    class="SegmentedButtonItem--icon-"
  >
    <ui5-icon
      class=""
      name="add"
    />
  </div>
</li>
`;

exports[`SegmentedButtonItem Selected SegmentedButtonItem 1`] = `
<li
  class="SegmentedButtonItem--segmentedButtonItem- SegmentedButtonItem--focusableItem- SegmentedButtonItem--selected-"
  data-has-own-width="false"
>
  <div
    class="SegmentedButtonItem--icon- SegmentedButtonItem--withText-"
  >
    <ui5-icon
      class=""
      name="add"
    />
  </div>
  My Item
</li>
`;
